--- a/D3DayCampers.html
+++ b/D3DayCampers.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <script src="D3/d3.v3.min.js"></script>
+    <script src="https://d3js.org/d3.v3.min.js"></script>
     <style>
         body, html {
             margin: 50px;
