--- a/D3DayCampers.html
+++ b/D3DayCampers.html
@@ -31,8 +31,8 @@
 </head>
 <body>
 <ul>
-  <li><a href="Day.html">Day Campers</a></li>
-  <li><a href="Night.html">Night Campers</a></li>
+  <li><a href="D3DayCampers.html">Day Campers</a></li>
+  <li><a href="D3NightCampers.html">Night Campers</a></li>
 </ul>
 
 <svg></svg>
